# altair_gazebo_simulation

./: data.yaml
src/altair_simulation/: CMakeLists.txt  package.xml
src/altair_simulation/config/: bridge.yaml
src/altair_simulation/launch/: altair.gazebo.launch.py  op3.gazebo.launch.py
src/altair_simulation/worlds/: altair_world.sdf
src/op3_description/: CMakeLists.txt  package.xml
src/op3_description/urdf/: model.urdf  robot.urdf  robotis_op3.gazebo copy.xacro  robotis_op3.gazebo.xacro  robotis_op3.urdf.xacro  robotis_op3.visuals.xacro
src/op3_description/worlds/: plane.urdf  soccer_field_mod.world
