<?xml version="1.0"?>
<package format="2">
  <name>op3_description</name>
  <version>0.1.1</version>
  <description>
    The op3_description package
  </description>
  <maintainer email="falahnz@todo.todo">falahnz</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>ros2launch</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_control</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend> 
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>